# quickgc

./: Cargo.toml  LICENSE  README.md  config.json
src/: commit_message_lint.rs  config.rs  lib.rs  main.rs  render_config.rs
