[package]
name = "quickgc"
version = "0.1.0"
description = "simple style with git commit comments for personal workflow"
author = "Chxmeleon"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/chxmeleon/quickgc-rust"
repository = "https://github.com/chxmeleon/quickgc-rust"
keywords = ["cli", "git"]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.33.3"
colored = "2.0.0"
inquire = "0.2.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"

[[bin]]
name = "zg"
path = "src/main.rs"
