[package]
name = "quickgc"
version = "0.2.0"
description = "simple style with git commit comments for personal workflow"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/chxmeleon/quickgc-rust"
repository = "https://github.com/chxmeleon/quickgc-rust"
keywords = ["cli", "git"]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.33.3"
colored = "2.0.0"
dirs = "5.0.1"
inquire = "0.2.0"
regex = "1.10.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
tokio = { version = "1.33.0", features = ["full"]}

[[bin]]
name = "zg"
path = "src/main.rs"
